small fixes to spacing on help page

--- a/client/styles/scss/help.scss
+++ b/client/styles/scss/help.scss
@@ -14,7 +14,7 @@
     color: $green;
     padding: 0 5vw 5vh 5vw; 
     border-bottom: 1px solid $dark-blue;
-    margin-bottom: 30px;
+    padding-bottom: 150px;
 }
 
 .help-h1 {
@@ -26,4 +26,10 @@
 .advocacy-section {
     margin: 150px 0 150px 0;
     text-align: left;
+}
+
+.help-section {
+    border-top: 1px solid $dark-blue;
+    padding-top: 150px;
+    margin-top: 150px;
 }
